--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -1,3 +1,4 @@
+#Wed Apr 25 16:42:30 CEST 2012
 AbstractTreeNodeUiHandler_0=Properties
 AbstractTreeNodeUiHandler_1=Actions
 BasicModelConverter.0=Convert basic data
@@ -37,6 +38,14 @@ CalcCasesConverter_3=Operation cancelled by user
 CalcCasesConverter_4=Unexpected error during import of calc case '%s'
 CalcCasesConverter_5=Failed to access calc case
 CalcCasesConverter_6=Other
+CalculateEvaporationAction_0=Berechnung Verdunstung
+CalculateEvaporationAction_1=Zeitreihe Mittlere Luftfeuchte fehlt.
+CalculateEvaporationAction_2=Zeitreihe Mittlere Temperatur fehlt.
+CalculateEvaporationAction_3=Zeitreihe  Windgeschwindigkeit fehlt.
+CalculateEvaporationAction_4=Zeitreihe Sonnenscheindauer fehlt.
+CalculateEvaporationAction_5=Bei der \u00DCberpr\u00FCfung der Eingangsdaten wurde festgellt, dass Eingangsdaten fehlen. Bitte f\u00FCgen Sie die fehlenden Eingangsdaten zur Station hinzu.
+CalculateEvaporationData_0=Grasverdunstung
+CalculateEvaporationData_1=Seeverdunstung
 CatchmentBean_0=The sum of factors (%d%%) is not allowed to be zero or negative.
 CatchmentBean_1=The sum of factors (%d%%) is not allowed to be greater than 100.
 CatchmentBean_2=The sum of factors (%d%%) is not 100%%.
@@ -58,11 +67,26 @@ CatchmentTimeseriesGuesser_5=Filename is empty, aborting.
 CatchmentTimeseriesGuesser_6=No timeseries with same filename found
 CatchmentTimeseriesGuesser_7=Multiple timeseries with same file name found, using first one with same parameter type.
 CatchmentTimeseriesGuesser_8=Multiple timeseries with same file name found, but none with parameter type '%s'
+ChooseEvaporationInputFilesPage_11=The calculation period it the common period / date range of all selected timeseries.
+ChooseEvaporationInputFilesPage_12=Sources
+ChooseEvaporationInputFilesPage_14=Empty element. Assign a source element, please.
+ChooseEvaporationInputFilesPage_15=Couldn't determine calculation period. Missing source(s)?
+ChooseEvaporationInputFilesPage_16=Yyyy-MM-dd HH\:mm
+ChooseEvaporationInputFilesPage_1=Calculation data
+ChooseEvaporationInputFilesPage_2=Please set all calculation data that will be serve as basis for the evaporation calculation.
+ChooseEvaporationInputFilesPage_3=Evaporation
+ChooseEvaporationInputFilesPage_4=Empty element. Assign a source element, please.
+ChooseEvaporationInputFilesPage_5=Calculation period
+ChooseEvaporationInputFilesPage_6=Start
+ChooseEvaporationInputFilesPage_9=End
 ChooseTimeseriesDialog_0=Choose Timeseries
 ChooseTimeseriesDialog_1=Search
 ChooseZmlLinkFeatureViewControl_0=Error
 ChooseZmlLinkFeatureViewControl_1=Can't resolve stations.gml
 ChooseZmlLinkFeatureViewControl_2=<empty>
+ChooseZmlLinkFeatureViewControl_3=%s\:
+ChooseZmlLinkFeatureViewControl_5=%s -
+ChooseZmlLinkFeatureViewControl_6=%s
 CleanSearchPanelAction_0=Reset search entry
 CleanSearchPanelAction_1=Reset search entries
 CompleteNetElementsTaskHandler_0=Kalinin-Miljukov Channels
@@ -83,6 +107,9 @@ DeleteTimeseriesAction_0=Delete Timeseries
 DeleteTimeseriesAction_1=Delete selected timeseries
 DeleteTimeseriesAction_2=Element contains no timeseries
 DeleteTimeseriesAction_3=Failed to delete timeseries
+DeleteTimeseriesOperation_0=Couldn't delete zml source file\: %s
+DeleteTimeseriesOperation_1=Couldn't remove timeseries from the stations.gml model.
+DeleteTimeseriesOperation_2=Delete timeseries
 EditCalibrationTaskHandler_0=Kalinin-Miljukov Channels
 EditCalibrationTaskHandler_1=Storage Channels
 EditCalibrationTaskHandler_2=Catchments
@@ -128,6 +155,17 @@ EditTimeseriesQualityComposite_0=Station name contains invalid chars
 EditTimeseriesQualityComposite_1=Quality already exists.
 EmptyNodeUiHandler_0=<Empty>
 EmptyNodeUiHandler_1=<empty database>
+EvaporationParameterPage_0=EvaporationParameterPage
+EvaporationParameterPage_10=Quality
+EvaporationParameterPage_11=Invalid quality name
+EvaporationParameterPage_1=Calculation parameter
+EvaporationParameterPage_2=Please take a look at the calculation parameter.
+EvaporationParameterPage_3=Parameter
+EvaporationParameterPage_4=Longitude
+EvaporationParameterPage_5=Longitude is not a number
+EvaporationParameterPage_6=Parameter
+EvaporationParameterPage_7=Longitude
+EvaporationParameterPage_8=Longitude is not a number
 ExtendAndOverwriteTimeseriesAction_0=Extend Timeseries and overwrite existing values
 ExtendAndOverwriteTimeseriesAction_1=Extend selected Timeseries and overwrite existing values
 ExtendTimeseriesAction_0=Extend Timeseries
@@ -168,6 +206,9 @@ IdwWizardLayoutPart_1=Changing the parameter type needs to update the list of ti
 ImportPedologyWizard.0=No soil types defined in project. Import impossible.
 ImportTimeseriesAction_0=Import Timeseries
 ImportTimeseriesAction_1=Imports a timeseries from an external data source and adds it to the selected station.
+ImportTimeseriesOperation.0=Invalid day resultion detected \u2013 times are varying
+ImportTimeseriesOperation.1=R\u00FCcksprung detected
+ImportTimeseriesOperation.2=Invalid timeseries. Timeseries contains gaps and has missing values.
 ImportTimeseriesOperation_0=Import Timeseries Operation failed - Error reading input timeseries
 ImportTimeseriesOperation_1=Import Timeseries Operation failed - A "R\u00FCcksprung" was detected.
 ImportTimeseriesOperation_2=Import Timeseries Operation failed - Couldn't resolve time step of timeseries.
@@ -205,6 +246,7 @@ KalypsoNAProjectWizard.ExceptionNotImplementedRHT=RHT (Retention Basins with Eva
 KalypsoNAProjectWizard.ExceptionStrangArt=Can not read StrangArt (Strandtype), check mapping, values formats
 KalypsoNAProjectWizard.HydrotopePageTitle=Import Hydrotopes
 KalypsoNAProjectWizard.NodePageTitle=Import Nodes
+KalypsoNAProjectWizard_10=Layer %d
 KalypsoNAProjectWizard_2=Projekt Template
 KalypsoNAProjectWizard_3=Please choose a project template
 KalypsoNAProjectWizard_4=Failed to create model files
@@ -212,7 +254,6 @@ KalypsoNAProjectWizard_5=Failed to write model files
 KalypsoNAProjectWizard_6=Failed to write model files
 KalypsoNAProjectWizard_7=Unknown channel type\: %d. Valid values are 0,1 or 2.
 KalypsoNAProjectWizard_9=Unable to map value '%s' to property '%s' of type '%s'.
-KalypsoNAProjectWizard_10=Layer %d
 KalypsoNAProjectWizardPage.BrowseButtonText=Browse...
 KalypsoNAProjectWizardPage.BrowseText=Choose a ESRI-Shape File\:
 KalypsoNAProjectWizardPage.CRSLabelText=Coordinate System
@@ -241,6 +282,7 @@ MergeTimeseriesOperation_0=Merging of observations failed.
 MergeTimeseriesOperation_1=Merge Timeseries Operation
 MergeTimeseriesOperation_2=Saving observation failed.
 MergeTimeseriesOperation_3=Merged observations
+MoveTimeSeriesOperation_0=Verschiebe Zeitreihe\: %s
 NewCalcCaseAction_0=Update calc case
 NewHydrologicalStationAction_0=New Hydrological Station
 NewHydrologicalStationAction_1=Creates a new hydrologcial station
@@ -369,6 +411,21 @@ RefreshSimulationsTaskHandler_1=Simulations with identical name detected\: '%s.\
 RefreshSimulationsTaskHandler_2=%s (exists)
 RefreshSimulationsTaskHandler_3=Please select the simulations to refresh
 RefreshSimulationsTaskHandler_4=Simulations with empty name detected\r\nPlease rename the simulations.
+RenameStationOperation_0=Rename station
+RenameStationOperation_1=Failed to rename station
+RepairMissingTimestepsOperation_0=Filling gaps and missing values
+RepairMissingTimestepsOperation_2=Gaps are detected
+RepairMissingTimestepsOperation_3=Missing timesteps in timeseries %s.\r\n\r\nAdd missing values automatically?
+RepairObservationJob_0=Repair timeseries?
+RepairObservationJob_1=Inport canceled. Incorrect input timeseries.
+RepairRueckspruengeOperation_0=R\u00FCcksprung has been deleted.
+RepairRueckspruengeOperation_1=Error \u2013 couldn't delete R\u00FCckspr\u00FCnge.
+RepairRueckspruengeOperation_2=R\u00FCcksprung has been removed.
+RepairRueckspruengeOperation_3=Auto repair R\u00FCckspr\u00FCnge?
+RepairTimestampsOperation_0=R\u00FCcksprung has been removed.
+RepairTimestampsOperation_1=Error \u2013 couldn't delete R\u00FCckspr\u00FCnge.
+RepairTimestampsOperation_2=Repair wron timestamps?
+RepairTimestampsOperation_3=Auto repair wrong timestamps?
 ReplaceTimeseriesAction_0=Replace Timeseries
 ReplaceTimeseriesAction_1=Replace selected Timeseries
 ReplaceTimeseriesObservation_0=Replacing Timeseries failed
@@ -406,7 +463,9 @@ StorageChannelValidator_3=Missing '%s' values in WVQ-Relationship
 StorageChannelValidator_4=An additional effluent (%s) has been set, but no corresponding discharge values have been defined in the WVQ-Relation.
 StorageChannelValidator_5=Additional discharge values (effluent %s) have been defined in the WVQ-Relation, but no corresponding target node has been set.
 StoreTimeseriesOperation.0=Import Timeseries Operation
-StoreTimeseriesOperation.1=Timeseries of the same type (parameter, timestep, quality) already exists. Replaced old timeseries!
+StoreTimeseriesOperation.1=Timeseries of the same type (parameter, timestep, quality) already exists. Replaced old timeseries\!
+TargetTimeseriesValidator_0=Zeitreihen-Import abgebrochen. Zeitreihe existiert bereits(Typ, Aufl\u00F6sung und Qualit\u00E4t). Um Zeitreihe dennoch zu importieren, weisen Sie bitte der Zeitreihe eine andere "Qualit\u00E4t" zu.
+TargetTimeseriesValidator_1=Verifying timeseries import target
 TextSearchFilterControl_0=Search string
 ThiessenFactorsOperation.0=Created by Thiessen Method
 ThiessenFactorsOperation_0=Calculate thiessen factors
@@ -446,6 +505,9 @@ TimeseriesImporter_6=Skipped timeseries '%s'\: no date axis
 TimeseriesImporter_7=Skipped timeseries '%s'\: no value axis
 TimeseriesImporter_8=Failed to import timeseries '%s'\: more than one value axis.
 TimeseriesImporter_9=Unsupported parameter type '%s' for timeseries '%s'
+TimeseriesImportWizard_2=Source\: %s
+TimeseriesImportWizard_3=Timeseries import
+TimeseriesImportWizard_4=Timeseries import
 TimeseriesManagementView_0=Search
 TimeseriesThiessenPolygons_0=Failed to read thiessen polygon data
 TimeseriesUiHandler_0=Timeseries
@@ -470,7 +532,20 @@ UpdateSimulationWorker_24=Failed to copy initial values from simulation '%s'\: i
 UpdateSimulationWorker_25=Failed to copy initial values from simulation '%s'
 UpdateSimulationWorker_2=Updating calc case
 UpdateSimulationWorker_3=Reading control file...
-ValidateTimestepsVisitor_0=dd.MM.yy HH\:mm
+UpdateTimeseriesLinks_0=Updating timeseries links
+UpdateTimeseriesLinks_1=Updating of model file "%s" failed.
+UpdateTimeseriesLinks_2=Updated model file "%s"
+ValidateMissingTimestepsOperation.0=Gaps and missing value detection
+ValidateRuecksprungOperation.0=R\u00FCcksprung detection
+ValidateRuecksprungVisitor.0=yyyy-MM-dd HH\:mm\:ss
+ValidateRuecksprungVisitor.1=R\u00FCcksprung\: %s - %s
+ValidateRuecksprungVisitor.2=R\u00FCckspr\u00FCnge has been detected.
+ValidateTageszeitreihenOperation_0=Checking timesteps of day resuluted timeseries
+ValidateTageszeitreihenOperation_1=Canceld detection. Resultion of timeseries \!\= 24h
+ValidateTimestampVisitor.0=yyyy-MM-dd HH\:mm\:ss
+ValidateTimestampVisitor.1=Invalid timestamp detected\: %s
+ValidateTimestampVisitor.2=Invalid timestamp(s) detected
+ValidateTimestepsVisitor_0=yy-MM-dd HH\:mm\:ss
 ValidateTimestepsVisitor_1=Gap (missing values) in timeseries detected - between %s and %s
 ValidateTimestepsVisitor_2=Time Step Validation Status
 ZmlInlineFeatureDialog.0=Failed to validate existing observation
