--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -1,3 +1,4 @@
+#Wed Apr 25 16:42:30 CEST 2012
 AbstractTreeNodeUiHandler_0=Eigenschaften
 AbstractTreeNodeUiHandler_1=Aktionen
 BasicModelConverter.0=Konvertiere Basisdaten
@@ -37,6 +38,14 @@ CalcCasesConverter_3=Abbruch durch Benutzer
 CalcCasesConverter_4=Unerwarteter Fehler beim Konvertieren von Rechenvariante '%s'
 CalcCasesConverter_5=Fehler beim Zugriff auf die Rechenvarianten
 CalcCasesConverter_6=Andere
+CalculateEvaporationAction_0=
+CalculateEvaporationAction_1=
+CalculateEvaporationAction_2=
+CalculateEvaporationAction_3=
+CalculateEvaporationAction_4=
+CalculateEvaporationAction_5=
+CalculateEvaporationData_0=
+CalculateEvaporationData_1=
 CatchmentBean_0=Die Summe der Faktoren (%d%%) darf nicht 0 oder negativ sein.
 CatchmentBean_1=Die Summe der Faktoren (%d%%) darf nicht gr\u00F6\u00DFer 100 sein.
 CatchmentBean_2=Die Summe der Faktoren (%d%%) ist ungleich 100
@@ -58,12 +67,24 @@ CatchmentTimeseriesGuesser_5=Leere Dateiname, Abbruch.
 CatchmentTimeseriesGuesser_6=Keine Zeitreihe mit identischem Dateinamen gefunden.
 CatchmentTimeseriesGuesser_7=Mehrere Zeitreihen mit identischem Dateinamen gefunden. Nehme die erste Zeitreihe vom gleichen Typ.
 CatchmentTimeseriesGuesser_8=Mehrere Zeitreihen mit identischem Dateinahmen gefunden - jedoch vom Parameter-Typ '%s'
+ChooseEvaporationInputFilesPage_11=Der Berechnungszeitraum ist der gemeinsame Zeitraum aller zugewiesener Zeitreihen.
+ChooseEvaporationInputFilesPage_12=Quellen
+ChooseEvaporationInputFilesPage_14=Leeres Element. Bitte weisen Sie alle Quellen zu.
+ChooseEvaporationInputFilesPage_15=Konnte Berechnungszeitraum nicht bestimmen. Fehlende Eingabedatei?
+ChooseEvaporationInputFilesPage_16=dd.MM.yyyy HH\:mm
+ChooseEvaporationInputFilesPage_1=Berechnungsdaten
+ChooseEvaporationInputFilesPage_2=Bitte bestimmen Sie alle Berechnungsdaten, die als Grundlage f\u00FCr die Berechnung der Verdunstung dienen.
+ChooseEvaporationInputFilesPage_3=Verdunstung
+ChooseEvaporationInputFilesPage_4=Leeres Element. Bitte weisen Sie alle Quellen zu.
+ChooseEvaporationInputFilesPage_5=Berechnungszeitraum
+ChooseEvaporationInputFilesPage_6=Start
+ChooseEvaporationInputFilesPage_9=Ende
 ChooseTimeseriesDialog_0=W\u00E4hle Zeitreihe
 ChooseTimeseriesDialog_1=Suche
 ChooseZmlLinkFeatureViewControl_0=Error
 ChooseZmlLinkFeatureViewControl_1=Konnte 'stations.gml' nicht finden
 ChooseZmlLinkFeatureViewControl_2=<leer>
-ChooseZmlLinkFeatureViewControl_3=%s:
+ChooseZmlLinkFeatureViewControl_3=%s\:
 ChooseZmlLinkFeatureViewControl_5=%s -
 ChooseZmlLinkFeatureViewControl_6=%s
 CleanSearchPanelAction_0=Sucheingabe zur\u00FCcksetzen
@@ -82,10 +103,13 @@ DeleteStationAction_2=Element enth\u00E4lt keine Stationen
 DeleteStationAction_3=Fehler beim L\u00F6schen der Station(en)
 DeleteStationAction_4=L\u00F6sche gew\u00E4hlte Station(en)? Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
 DeleteStationAction_5=L\u00F6sche Station '%s'? Diese Aktionen kann nicht r\u00FCckg\u00E4ngig gemacht werden\!
-DeleteTimeseriesAction_0=Zeitreihe(n) löschen
-DeleteTimeseriesAction_1=Gewählte Zeitreihe(n) löschen
+DeleteTimeseriesAction_0=Zeitreihe(n) l\u00F6schen
+DeleteTimeseriesAction_1=Gew\u00E4hlte Zeitreihe(n) l\u00F6schen
 DeleteTimeseriesAction_2=Element enth\u00E4lt keine Zeitreihen
 DeleteTimeseriesAction_3=Fehler beim L\u00F6schen der Zeitreihe(n)
+DeleteTimeseriesOperation_0=Fehler beim L\u00F6schen der ZML Zeitreihendatei, der Zeitreihe\: %s
+DeleteTimeseriesOperation_1=Fehler beim Entfernen der Zeitreihen aus dem stations.gml Modell.
+DeleteTimeseriesOperation_2=L\u00F6sche Zeitreihen
 EditCalibrationTaskHandler_0=Kalinin-Miljukov Strang
 EditCalibrationTaskHandler_1=Speicherstrang
 EditCalibrationTaskHandler_2=Einzugsgebiete
@@ -131,8 +155,19 @@ EditTimeseriesQualityComposite_0=Stationsname enth\u00E4lt ung\u00FCltige Zeiche
 EditTimeseriesQualityComposite_1=Bemerkung bereits vorhanden.
 EmptyNodeUiHandler_0=<Leer>
 EmptyNodeUiHandler_1=<Leere Datenbank>
-ExtendAndOverwriteTimeseriesAction_0=Zeitreihe erweitern und Überschreiben vorhandener Werte
-ExtendAndOverwriteTimeseriesAction_1=Gewählte Zeitreihe erweitern und dabei vorhandene Werte überschreiben
+EvaporationParameterPage_0=EvaporationParameterPage
+EvaporationParameterPage_10=Quality
+EvaporationParameterPage_11=Ung\u00FCltiger Quality-Name
+EvaporationParameterPage_1=Berechnungsparameter
+EvaporationParameterPage_2=\u00C4ndern Sie die Berechnungsparameter wie gew\u00FCnscht.
+EvaporationParameterPage_3=Parameter
+EvaporationParameterPage_4=Breitengrad
+EvaporationParameterPage_5=Breitengrad ist kein g\u00FCltiger Zahlenwert.
+EvaporationParameterPage_6=Parameter
+EvaporationParameterPage_7=Breitengrad
+EvaporationParameterPage_8=Breitengrad ist kein g\u00FCltiger Zahlenwert.
+ExtendAndOverwriteTimeseriesAction_0=Zeitreihe erweitern und \u00DCberschreiben vorhandener Werte
+ExtendAndOverwriteTimeseriesAction_1=Gew\u00E4hlte Zeitreihe erweitern und dabei vorhandene Werte \u00FCberschreiben
 ExtendTimeseriesAction_0=Zeitreihe erweitern
 ExtendTimeseriesAction_1=Gew\u00E4hlte Zeitreihe erweitern
 FeatureBean_0=Editiere Eigenschaften
@@ -171,6 +206,9 @@ IdwWizardLayoutPart_1=\u00C4nderung des Parameter-Typs \u00E4ndert Liste der Zei
 ImportPedologyWizard.0=Es sind keine Bodentypen definiert. Import nicht m\u00F6glich.
 ImportTimeseriesAction_0=Zeitreihe importieren
 ImportTimeseriesAction_1=Importiere eine Zeitreihe aus Fremddaten und Zuweisung zur gew\u00E4hlten Station.
+ImportTimeseriesOperation.0=Falsch aufgel\u00F6ste Tageszeitreihe - Uhrzeiten variieren.
+ImportTimeseriesOperation.1=Zeitlicher R\u00FCcksprung wurde festgestellt.
+ImportTimeseriesOperation.2=Fehlerhafte Zeitreihe. Zeitreihe enth\u00E4lt L\u00FCcken und Fehlwerte.
 ImportTimeseriesOperation_0=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 Fehler beim Einlesen der Eingangsdaten.
 ImportTimeseriesOperation_1=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 R\u00FCcksprung wurde festgestellt.
 ImportTimeseriesOperation_2=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 Bestimmung des Zeitschritts nicht m\u00F6glich.
@@ -178,7 +216,7 @@ ImportTimeseriesOperation_3=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2
 ImportTimeseriesOperation_4=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 Fehlerhafter Zeitschritt.
 ImportTimeseriesOperation_5=Importiere Zeitreihe Verarbeitung
 ImportTimeseriesOperation_6=Fehler bei \u00DCberpr\u00FCfung des Zeitschritts.
-ImportTimeseriesOperation_7=Zeitlicher Rücksprung bei %s.
+ImportTimeseriesOperation_7=Zeitlicher R\u00FCcksprung bei %s.
 ImportTimeseriesOperation_8=Keine zeitliche R\u00FCckspr\u00FCnge.
 ImportTimeseriesOperation_9=Fehler in zeitlicher R\u00FCcksprung-Detektion
 KalypsoModuleRRM_0=Altprojekte importieren
@@ -208,6 +246,7 @@ KalypsoNAProjectWizard.ExceptionNotImplementedRHT=Reservoir mit Ber\u00FCcksicht
 KalypsoNAProjectWizard.ExceptionStrangArt=StrangArt konnte nicht eingelesen werden, \u00FCberpr\u00FCfe Zuordnung, Werte und Wertearten
 KalypsoNAProjectWizard.HydrotopePageTitle=Hydrotope importieren
 KalypsoNAProjectWizard.NodePageTitle=Knoten importieren
+KalypsoNAProjectWizard_10=Schicht %d
 KalypsoNAProjectWizard_2=Project Template
 KalypsoNAProjectWizard_3=Wie w\u00E4hlen Sie, welche Projektvorlage verwendet werden soll
 KalypsoNAProjectWizard_4=Fehler beim Erzeugen der Modelldaten
@@ -215,7 +254,6 @@ KalypsoNAProjectWizard_5=Fehler beim Schreiben der Modelldaten
 KalypsoNAProjectWizard_6=Fehler beim Schreiben der Modelldaten
 KalypsoNAProjectWizard_7=Unbekannter Strangtyp\: %d. G\u00FCltige Werte sind 0, 1, 2
 KalypsoNAProjectWizard_9=Fehler bei der Zuordnung von Wert '%s' zur Eigenschaft '%s' von Typ '%s'.
-KalypsoNAProjectWizard_10=Schicht %d
 KalypsoNAProjectWizardPage.BrowseButtonText=Durchsuchen...
 KalypsoNAProjectWizardPage.BrowseText=W\u00E4hlen Sie eine ESRI-Shapedatei aus\:
 KalypsoNAProjectWizardPage.CRSLabelText=Koordinatensystem\:
@@ -236,7 +274,7 @@ KalypsoNAProjectWizardPage_0=ESRI Shape Dateien (*.shp)
 KalypsoNAProjectWizardPage_1=Fehler beim Laden von\: %s
 KalypsoNAProjectWizardPage_2=Alle Dateien (*.*)
 LanduseTaskHandler_0=Versiegelungsklassen
-LanduseTaskHandler_1=Jahresgänge
+LanduseTaskHandler_1=Jahresg\u00E4nge
 LanduseTaskHandler_2=Landnutzung
 LinearSumBean_0=Aktualisiere Einzugsgebiete...
 LinearSumHelper_0=Fehler beim Laden der Stationen
@@ -244,6 +282,7 @@ MergeTimeseriesOperation_0=Zusammenf\u00FChrung der Daten fehlgeschlagen
 MergeTimeseriesOperation_1=Zusammenf\u00FChrung von Zeitreihen
 MergeTimeseriesOperation_2=Speichern der Daten fehlgeschlagen.
 MergeTimeseriesOperation_3=Daten zusammengef\u00FChrt.
+MoveTimeSeriesOperation_0=
 NewCalcCaseAction_0=Aktualisiere Rechenvariante
 NewHydrologicalStationAction_0=Neue Hydrologische Station
 NewHydrologicalStationAction_1=Erzeuge eine neue Hydrologische Station
@@ -372,6 +411,21 @@ RefreshSimulationsTaskHandler_1=Simulationen mit gleichen Namen entdeckt\: '%s.\
 RefreshSimulationsTaskHandler_2=%s (existiert)
 RefreshSimulationsTaskHandler_3=Bitte w\u00E4hlen Sie die Simulationen, die aktualisiert werden.
 RefreshSimulationsTaskHandler_4=Simulationen mit leeren Namen entdeckt\r\nBitte benennen sie diese Simualtionen.
+RenameStationOperation_0=Umbennung Station
+RenameStationOperation_1=Fehler beim Umbenennen der Station.
+RepairMissingTimestepsOperation_0=F\u00FClle Zeitl\u00FCcken / Fehlwerte
+RepairMissingTimestepsOperation_2=Fehlwerte wurden festgestellt
+RepairMissingTimestepsOperation_3=Nicht alle Zeitschritte der %s-Zeitreihe sind vorhanden.\r\n\r\nFehlende Eintr\u00E4ge automatisch hinzuf\u00FCgen?
+RepairObservationJob_0=Repariere Zeitreihe
+RepairObservationJob_1=Import abgebrochen. Fehlerhafte Eingangszeitreihe\!
+RepairRueckspruengeOperation_0=Zeitliche R\u00FCckspr\u00FCnge wurden entfernt
+RepairRueckspruengeOperation_1=Fehler beim entfernen von Zeitlichen R\u00FCckspr\u00FCngen.
+RepairRueckspruengeOperation_2=Zeitliche R\u00FCckspr\u00FCnge beheben
+RepairRueckspruengeOperation_3=Soll eine automatische Behebung der zeitlichen R\u00FCckspr\u00FCnge erfolgen?
+RepairTimestampsOperation_0=Zeitliche R\u00FCckspr\u00FCnge wurden entfernt
+RepairTimestampsOperation_1=Fehler beim entfernen von Zeitlichen R\u00FCckspr\u00FCngen.
+RepairTimestampsOperation_2=Falsche Zeitstempel reparieren?
+RepairTimestampsOperation_3=Soll eine automatische Reperatur der fehlerhaften Tages-Uhrzeiten erfolgen?
 ReplaceTimeseriesAction_0=Zeitreihe ersetzen
 ReplaceTimeseriesAction_1=Gew\u00E4hlte Zeitreihe ersetzen - es gehen alle vorhandene Werte verloren.
 ReplaceTimeseriesObservation_0=Zeitreihe Ersetzung fehlgeschlagen
@@ -409,7 +463,9 @@ StorageChannelValidator_3=Keine Werte vom Typ '%s' in der WVQ-Beziehung definier
 StorageChannelValidator_4=Eine zus\u00E4tzliche Abgabe (%s) wurde angegeben, es fehlen aber enstpechende Abflusswerte in der WVQ-Beziehung.
 StorageChannelValidator_5=Es wurden zus\u00E4tzliche Abflusswerte (%s) in der WVQ-Beziehung definiert, der Abgabeknoten aber nicht angegeben.
 StoreTimeseriesOperation.0=Zeitreihenimport
-StoreTimeseriesOperation.1=Zeitreihen der gleichen Art (Parameter, Zeitschritt, Bemerkung) existiert bereits. Alte Zeitreihe wurde überschrieben!
+StoreTimeseriesOperation.1=Zeitreihen der gleichen Art (Parameter, Zeitschritt, Bemerkung) existiert bereits. Alte Zeitreihe wurde \u00FCberschrieben\!
+TargetTimeseriesValidator_0=Time-series import aborted. Time series already exists (type, size and quality). To import the timeseries yet, please set a different "quality".
+TargetTimeseriesValidator_1=\u00DCberpr\u00FCfung Zeitreihen-Import Ziel.
 TextSearchFilterControl_0=Suchtext
 ThiessenFactorsOperation.0=Erzeugt durch Thiessen Verfahren
 ThiessenFactorsOperation_0=Berechne Thiessen Faktoren
@@ -449,6 +505,9 @@ TimeseriesImporter_6=\u00DCberspringe Zeitreihe '%s'\: Keine Datumsachse
 TimeseriesImporter_7=\u00DCberspringe Zeitreihe '%s'\: Keine Wertachse
 TimeseriesImporter_8=Fehler beim Import der Zeitreihe '%s'\: mehr als eine Wertachse
 TimeseriesImporter_9=Nicht unterst\u00FCtzte Parametertyp '%s' in Zeitreihe '%s'
+TimeseriesImportWizard_2=Quelle\: %s
+TimeseriesImportWizard_3=Zeitreihen-Import
+TimeseriesImportWizard_4=Zeitreihen-Import
 TimeseriesManagementView_0=Suche
 TimeseriesThiessenPolygons_0=Fehler beim Lesen der Thiessen Polygondaten
 TimeseriesUiHandler_0=Zeitreihe
@@ -473,8 +532,21 @@ UpdateSimulationWorker_24=Fehler beim Kopieren der initialen Werte der Simulatio
 UpdateSimulationWorker_25=Fehler beim Kopieren der initialen Werte der Simulation '%s'
 UpdateSimulationWorker_2=Aktualisiere Rechenvariante
 UpdateSimulationWorker_3=Lese Kontrolldatei
+UpdateTimeseriesLinks_0=Aktualisiere Zeitreihen-Verweise
+UpdateTimeseriesLinks_1=Aktualisierung der Modelldatei "%s" fehlgeschlagen.
+UpdateTimeseriesLinks_2=Aktualisierung der Modelldatei "%s"
+ValidateMissingTimestepsOperation.0=Zeitl\u00FCcken und Fehlwert-\u00DCberpr\u00FCfung
+ValidateRuecksprungOperation.0=Zeitliche R\u00FCcksprung-\u00DCberpr\u00FCfung
+ValidateRuecksprungVisitor.0=dd.MM.yyyy HH\:mm\:ss
+ValidateRuecksprungVisitor.1=Zeitlicher R\u00FCcksprung im Bereich\: %s - %s
+ValidateRuecksprungVisitor.2=Es wurden zeitliche R\u00FCckspr\u00FCnge entdeckt
+ValidateTageszeitreihenOperation_0=\u00DCberpr\u00FCfung des Zeitstempels von Tageszeitreihen
+ValidateTageszeitreihenOperation_1=\u00DCberpr\u00FCfung des Zeitstempels \u00FCbersprungen. Zeitreihe ist kein Tageszeitreihe
+ValidateTimestampVisitor.0=dd.MM.yyyy HH\:mm\:ss
+ValidateTimestampVisitor.1=Ung\u00FCltiger Zeitstempel gefunden\: %s
+ValidateTimestampVisitor.2=Es wurden ung\u00FCltige Zeit(en) an Tageszeitreihe entdeckt
 ValidateTimestepsVisitor_0=dd.MM.yy HH\:mm
-ValidateTimestepsVisitor_1=Lücke in Zeitreihe \u2013 zwischen %s und %s
+ValidateTimestepsVisitor_1=L\u00FCcke in Zeitreihe \u2013 zwischen %s und %s
 ValidateTimestepsVisitor_2=Zeitschritt \u00DCberpr\u00FCfung
 ZmlInlineFeatureDialog.0=Fehler beim Pr\u00FCfen einer bestehenden Definition
 ZmlInlineFeatureDialog.1=\u00D6ffne Definitionsdialog
