Improved message text

--- a/KalypsoModelWspmPdbCore/src/org/kalypso/model/wspm/pdb/internal/i18n/messages_de.properties
+++ b/KalypsoModelWspmPdbCore/src/org/kalypso/model/wspm/pdb/internal/i18n/messages_de.properties
@@ -93,7 +93,7 @@ UpdatePageBaseInfo.2=Bitte geben Sie ein g\u00FCltiges Koordinatensystem an.
 UpdatePageBaseInfo.1=Bitte geben Sie die Einstellungen f\u00FCr die Datenbank ein.
 UpdatePageBaseInfo.0=Datenbank Eigenschaften
 CheckInEventData_0=WSPM lokaler Arbeitsbereich
-PdbUpdater_9=\r\nBitte machen Sie eine Sicherheitskopie form dem Aktualisieren\r\nDatenbank jetzt aktualisieren?
+PdbUpdater_9=\r\nBitte machen Sie vor dem Aktualisieren eine Sicherheitskopie\r\nDatenbank jetzt aktualisieren?
 PdbUpdater_8=%s\r\nNur der Benutzer '%s' darf die Datenbank erzeugen.
 PdbUpdater_7=Datenbank Anlegen
 PdbUpdater_6=Jetzt Anlegen\!
