Fixed: reimporting wspwin project exported from Kalypso does not work Improved error handling if one zustand cannot be read. Gives warning message but import continues.

--- a/KalypsoWspWinCore/src/org/kalypso/wspwin/core/i18n/messages_de.properties
+++ b/KalypsoWspWinCore/src/org/kalypso/wspwin/core/i18n/messages_de.properties
@@ -22,7 +22,6 @@ org.kalypso.wspwin.core.WspCfg.3=Formatfehler in Zeile:
 org.kalypso.wspwin.core.WspCfg.6=Fehler in Datei:
 org.kalypso.wspwin.core.WspCfg.8=Erste Zeile von 'profproj.txt' ist leer.
 org.kalypso.wspwin.core.WspCfg.9=Formatfehler in Zeile 1.
-org.kalypso.wspwin.core.WspWinZustand.0=Formatfehler. Dateiende wurde erreicht bevor alle Segmente gelesen wurden. Zeile: 
-org.kalypso.wspwin.core.WspWinZustand.1=Formatfehler. Dateiende wurde erreicht bevor alle Segmente gelesen wurden. Zeile: 
-org.kalypso.wspwin.core.WspWinZustand.2=Falsche Anzahl Einträge in Zeile : 
-org.kalypso.wspwin.core.WspWinZustand.3=Formatfehler in Zeile:
+org.kalypso.wspwin.core.WspWinZustand.1=Formatfehler. Dateiende wurde erreicht bevor alle Segmente gelesen wurden. %s Zeile: %s
+org.kalypso.wspwin.core.WspWinZustand.2=Falsche Anzahl Einträge in %s Zeile: %s
+org.kalypso.wspwin.core.WspWinZustand.3=Formatfehler in %s Zeile: %s
