--- a/KalypsoWspWinCore/src/org/kalypso/wspwin/core/i18n/messages.properties
+++ b/KalypsoWspWinCore/src/org/kalypso/wspwin/core/i18n/messages.properties
@@ -23,10 +23,9 @@ org.kalypso.wspwin.core.WspCfg.3=Wrong syntax in line:
 org.kalypso.wspwin.core.WspCfg.6=Error in File:
 org.kalypso.wspwin.core.WspCfg.8=First line of profproj.txt is empty.
 org.kalypso.wspwin.core.WspCfg.9=Syntax of first line ist wrong.
-org.kalypso.wspwin.core.WspWinZustand.0=Syntax error. End of file reached before all reach-segments were read. Line numer: 
-org.kalypso.wspwin.core.WspWinZustand.1=Syntax error. End of file reached before all reach-segments were read. Line numer: 
-org.kalypso.wspwin.core.WspWinZustand.2=Wrong number of entries in line: 
-org.kalypso.wspwin.core.WspWinZustand.3=Wrong syntax in line: 
+org.kalypso.wspwin.core.WspWinZustand.1=Syntax error. End of file reached before all reach-segments were read. %s Line number: %s
+org.kalypso.wspwin.core.WspWinZustand.2=Wrong number of entries. %s Line number: %s
+org.kalypso.wspwin.core.WspWinZustand.3=Wrong syntax. %s Line number: %s
 Plotter_1=Bitte w\u00E4hlen Sie im folgenden Dialog die 'Plotter.exe' aus.
 Plotter_2=WspWin Plotter
 Plotter_3=Alle Dateien (*.*)
