--- a/KalypsoWspWinCore/src/org/kalypso/wspwin/core/i18n/messages.properties
+++ b/KalypsoWspWinCore/src/org/kalypso/wspwin/core/i18n/messages.properties
@@ -19,7 +19,7 @@ org.kalypso.wspwin.core.RunOffEventBean.1=End of file reached for event:
 org.kalypso.wspwin.core.RunOffEventBean.2=Syntax error in line: 
 org.kalypso.wspwin.core.WspCfg.1=First line of wsp.cfg is empty. 
 org.kalypso.wspwin.core.WspCfg.2=WSP.CFG: Wrong syntax in line: %d (6 Columns expected) 
-org.kalypso.wspwin.core.WspCfg.3=Wrong syntax in line: 
+org.kalypso.wspwin.core.WspCfg.3=Wrong syntax in line: %s 
 org.kalypso.wspwin.core.WspCfg.6=Error in File:
 org.kalypso.wspwin.core.WspCfg.8=First line of profproj.txt is empty.
 org.kalypso.wspwin.core.WspCfg.9=Syntax of first line ist wrong.
@@ -33,3 +33,6 @@ Plotter_4=Ausf\u00FChrbare Dateien (*.exe)
 Plotter_7=WspWin Plotter ausw\u00E4hlen
 Plotter_8=Der Pfad zur 'Plotter.exe' wurde noch nicht konfiguriert. 
 Plotter_9=Der Pfad zur Plotter.exe ist nicht mehr g\u00FCltig. 
+WspCfg.0=Failed to read state file: %s. Skipping this state.
+WspCfg.1=Failed to read Profproj file: %s. Skipping this file.
+WspCfg.2=Read %s
