--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -38,14 +38,14 @@ CalcCasesConverter_3=Operation cancelled by user
 CalcCasesConverter_4=Unexpected error during import of calc case '%s'
 CalcCasesConverter_5=Failed to access calc case
 CalcCasesConverter_6=Other
-CalculateEvaporationAction_0=Berechnung Verdunstung
-CalculateEvaporationAction_1=Zeitreihe Mittlere Luftfeuchte fehlt.
-CalculateEvaporationAction_2=Zeitreihe Mittlere Temperatur fehlt.
-CalculateEvaporationAction_3=Zeitreihe  Windgeschwindigkeit fehlt.
-CalculateEvaporationAction_4=Zeitreihe Sonnenscheindauer fehlt.
-CalculateEvaporationAction_5=Bei der \u00DCberpr\u00FCfung der Eingangsdaten wurde festgellt, dass Eingangsdaten fehlen. Bitte f\u00FCgen Sie die fehlenden Eingangsdaten zur Station hinzu.
-CalculateEvaporationData_0=Grasverdunstung
-CalculateEvaporationData_1=Seeverdunstung
+CalculateEvaporationAction_0=Calculate Evaporation
+CalculateEvaporationAction_1=Mean humidity timeseries is missing.
+CalculateEvaporationAction_2=Mean temperature timeseries is missing.
+CalculateEvaporationAction_3=Mean wind velocity timeseries is missing.
+CalculateEvaporationAction_4=Sunshine day hours timeseries is missing.
+CalculateEvaporationAction_5=Missing input timeseries were detected. Please assign all missing input timeseries.
+CalculateEvaporationData_0=Land based evaporation
+CalculateEvaporationData_1=Water based evaporation
 CatchmentBean_0=The sum of factors (%d%%) is not allowed to be zero or negative.
 CatchmentBean_1=The sum of factors (%d%%) is not allowed to be greater than 100.
 CatchmentBean_2=The sum of factors (%d%%) is not 100%%.
