--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -38,14 +38,14 @@ CalcCasesConverter_3=Abbruch durch Benutzer
 CalcCasesConverter_4=Unerwarteter Fehler beim Konvertieren von Rechenvariante '%s'
 CalcCasesConverter_5=Fehler beim Zugriff auf die Rechenvarianten
 CalcCasesConverter_6=Andere
-CalculateEvaporationAction_0=
-CalculateEvaporationAction_1=
-CalculateEvaporationAction_2=
-CalculateEvaporationAction_3=
-CalculateEvaporationAction_4=
-CalculateEvaporationAction_5=
-CalculateEvaporationData_0=
-CalculateEvaporationData_1=
+CalculateEvaporationAction_0=Berechnung Verdunstung
+CalculateEvaporationAction_1=Zeitreihe Mittlere Luftfeuchte fehlt.
+CalculateEvaporationAction_2=Zeitreihe Mittlere Temperatur fehlt.
+CalculateEvaporationAction_3=Zeitreihe  Windgeschwindigkeit fehlt.
+CalculateEvaporationAction_4=Zeitreihe Sonnenscheindauer fehlt.
+CalculateEvaporationAction_5=Bei der \u00DCberpr\u00FCfung der Eingangsdaten wurde festgestellt, dass Eingangsdaten fehlen. Bitte f\u00FCgen Sie die fehlenden Eingangsdaten zur Station hinzu.
+CalculateEvaporationData_0=Grasverdunstung
+CalculateEvaporationData_1=Seeverdunstung
 CatchmentBean_0=Die Summe der Faktoren (%d%%) darf nicht 0 oder negativ sein.
 CatchmentBean_1=Die Summe der Faktoren (%d%%) darf nicht gr\u00F6\u00DFer 100 sein.
 CatchmentBean_2=Die Summe der Faktoren (%d%%) ist ungleich 100
