--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
@@ -30,6 +30,7 @@ modelNet.gmt.groundwater=Grundwasser - Vernetzung
 
 control.gft.general=Allgemeines
 control.gft.simulation=Simulationsmanagement
+control.gft.calculation=Rechnung
 control.gft.syntheticPrecipitation=synthetische Niederschlagereignisse
 
 modelConstruction.gft.group.commonProperties=Allgemeine Eigenschaften
