new result view task

--- a/KalypsoUIRRM/plugin_de.properties
+++ b/KalypsoUIRRM/plugin_de.properties
@@ -1,7 +1,7 @@
 KalypsoUIRRM.updateKMParameter.label=KM Parameter berechnen
 KalypsoUIRRM.updateKMParameter.tooltip=Startet den Dialog zur Berechnung der Kalinin-Miljukov Parameter der selektierten KM Stränge
 wizard.name.0 = KalypsoHydrology Model (aus ASCII Dateien)
-command.name.0 = Landnutzung 
+command.name.0 = Landnutzung
 command.name.1 = Pedologie
 command.name.2 = Geologie
 command.name.3 = Hydrotope erzeugen
@@ -39,6 +39,9 @@ org.kalypso.model.rrm.simulationManagement.name=Simulation
 org.kalypso.model.rrm.simulationManagement.description=Simulation
 simulationManagement=
 simulationManagement_help=Simulation Management
+
+org.kalypso.model.rrm.resultView.name=Ergebnisansicht
+org.kalypso.model.rrm.resultView.description=Ergebnisansicht
 
 NewWizard.name=KalypsoHydrology Modell
 Category.name=Niederschlag-Abfluss Modell
