Ticket #854 (closed enhancement: fixed): Cascading layers for 1D profiles

--- a/Kalypso1d2dProject/src/org/kalypso/kalypso1d2d/pjt/i18n/messages.properties
+++ b/Kalypso1d2dProject/src/org/kalypso/kalypso1d2d/pjt/i18n/messages.properties
@@ -27,6 +27,7 @@ org.kalypso.kalypso1d2d.pjt.actions.ImportElevationHandler.4=Could not import di
 org.kalypso.kalypso1d2d.pjt.actions.ImportProfileHandler.0=Model data file (terrain.gml) could not be loaded.
 org.kalypso.kalypso1d2d.pjt.actions.ImportProfileHandler.1=Import Profiles
 org.kalypso.kalypso1d2d.pjt.actions.ImportProfileHandler.3=Map view not opened. Themes could not be added.
+org.kalypso.kalypso1d2d.pjt.actions.ImportProfileHandler.4=Cross Sections
 #Import WSPM model
 org.kalypso.kalypso1d2d.pjt.actions.ImportWSPMHandler.0=Import WSPM-profiles
 org.kalypso.kalypso1d2d.pjt.actions.ImportWSPMHandler.1=Import WSPM-profiles
