Ticket #823 (closed defect: fixed) KalypsoWSPM: Anzeige von Wasserspiellagen

--- a/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages.properties
+++ b/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages.properties
@@ -184,6 +184,7 @@ org.kalypso.model.wspm.tuhh.ui.resolutions.DelRoughnessResolution.4=Select the r
 SobekProfileExportFileChooserPage_10=Please choose an ID pattern
 org.kalypso.model.wspm.tuhh.ui.resolutions.DelRoughnessResolution.0=Remove roughness
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.15=Data is being saved
+org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.1=Illegal simulation name: '%s'. Name must not end with '.'
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.13=Save data
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.12=Perform calculation
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.10=The data has been changed and must be saved before performing the calculation. \r\nDo you want to save the following resources now?
