--- a/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
+++ b/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
@@ -181,6 +181,7 @@ org.kalypso.model.wspm.tuhh.ui.resolutions.DelRoughnessResolution.4=W\u00E4hlen 
 SobekProfileExportFileChooserPage_10=Bitte geben Sie ein das ID-Pattern ein
 org.kalypso.model.wspm.tuhh.ui.resolutions.DelRoughnessResolution.0=Rauheiten entfernen
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.15=Daten werden gespeichert
+org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.1=Name der Rechenvariante ungültig: '%s'. Der Name darf nicht auf '.' enden.
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.13=Daten speichern
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.12=Berechnung durchf\u00FChren
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.10=Die Daten wurden ver\u00E4ndert und m\u00FCssen vor der Rechnung gespeichert werden.\r\nWollen Sie die folgenden Resourcen jetzt speichern?\r\n
