Ticket #842 (accepted defect): Bad label for quick-fix of missing roughness values

--- a/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages.properties
+++ b/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages.properties
@@ -183,6 +183,7 @@ AbstractSobekProfileExportOperation_0=Write Profile
 org.kalypso.model.wspm.tuhh.ui.resolutions.DelRoughnessResolution.4=Select the roughness to change\:
 SobekProfileExportFileChooserPage_10=Please choose an ID pattern
 org.kalypso.model.wspm.tuhh.ui.resolutions.DelRoughnessResolution.0=Remove roughness
+org.kalypso.model.wspm.tuhh.ui.resolutions.AddRoughnessResolution.0=Add roughness
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.15=Data is being saved
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.1=Illegal simulation name: '%s'. Name must not end with '.'
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.13=Save data
