--- a/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
+++ b/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
@@ -180,6 +180,7 @@ AbstractSobekProfileExportOperation_0=Profile schreiben
 org.kalypso.model.wspm.tuhh.ui.resolutions.DelRoughnessResolution.4=W\u00E4hlen Sie die zu \u00E4ndernde Rauheit\:
 SobekProfileExportFileChooserPage_10=Bitte geben Sie ein das ID-Pattern ein
 org.kalypso.model.wspm.tuhh.ui.resolutions.DelRoughnessResolution.0=Rauheiten entfernen
+org.kalypso.model.wspm.tuhh.ui.resolutions.AddRoughnessResolution.0=Rauheiten hinzufügen
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.15=Daten werden gespeichert
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.1=Name der Rechenvariante ungültig: '%s'. Der Name darf nicht auf '.' enden.
 org.kalypso.model.wspm.tuhh.ui.actions.CalcTuhhHandler.13=Daten speichern
