Incomplete - task : Ausgabemanagement

--- a/KalypsoUIRRM/plugin_de.properties
+++ b/KalypsoUIRRM/plugin_de.properties
@@ -35,7 +35,7 @@ org.kalypso.model.rrm.catchmentModels.description=Gebietsmodelle
 org.kalypso.model.rrm.editCalibration.name=Kalibrierung
 org.kalypso.model.rrm.editCalibration.description=Kalibrierungsparameter bearbeiten
 
-org.kalypso.model.rrm.simulationResultOutputManagement.name=Ergebnisausgabe-Verwaltung
+org.kalypso.model.rrm.simulationResultOutputManagement.name=Verwaltung Ergebnisausgabe
 org.kalypso.model.rrm.simulationResultOutputManagement.description=Bestimmen Sie die Ergebnisse einer späteren Simulation
 
 org.kalypso.model.rrm.simulationManagement.name=Simulation
