--- a/trunk/KalypsoUIRRM/plugin_de.properties
+++ b/trunk/KalypsoUIRRM/plugin_de.properties
@@ -35,8 +35,8 @@ org.kalypso.model.rrm.catchmentModels.description=Gebietsmodelle
 org.kalypso.model.rrm.editCalibration.name=Kalibrierung
 org.kalypso.model.rrm.editCalibration.description=Kalibrierungsparameter bearbeiten
 
-org.kalypso.model.rrm.simulationResultOutputManagement.name=Verwaltung Ergebnisausgabe
-org.kalypso.model.rrm.simulationResultOutputManagement.description=Bestimmen Sie die Ergebnisse einer späteren Simulation
+org.kalypso.model.rrm.simulationResultOutputManagement.name=Ausgabe-Einstellungen
+org.kalypso.model.rrm.simulationResultOutputManagement.description=Bestimmen Sie die Ausgabe-Einstellungen einer späteren Simulation
 
 org.kalypso.model.rrm.simulationManagement.name=Simulation
 org.kalypso.model.rrm.simulationManagement.description=Simulation
